Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,4 +1,6 @@
 [access]
 	inheritFrom = gsubtreed-template
-[access "refs/for/*"]
+[access "refs/*"]
+	forgeAuthor = group mdb/copybara-git-writers
+	forgeCommitter = group mdb/copybara-git-writers
 	read = group mdb/copybara-git-readers
